# qt-synth

./: CMakeLists.txt  README.md  audionode.h  audioplayer.h  blackkey.cpp  blackkey.h  gainnode.h  helpers.cpp  knobcontrol.cpp  lp12filternode.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  spritesheet.cpp  spritesheet.h  tooltip.cpp
resources/: resources.qrc
src/: adsrenvelope.cpp  adsrenvelope.h  adsrnode.cpp  adsrnode.h  arithmeticnode.cpp  arithmeticnode.h  audiocontext.h  audionode.cpp  audionode.h  audioplayer.cpp  automatedaudionode.cpp  automatedaudionode.h  automationnode.cpp  automationnode.h  blackkey.h  buffernode.cpp  buffernode.h  definitions.h  envelopenode.cpp  envelopenode.h  gainnode.cpp  gainnode.h  helpers.h  knobcontrol.cpp  knobcontrol.h  lp12filternode.cpp  lp12filternode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_cable.cpp  mainwindow_cable.h  mixernode.cpp  mixernode.h  muladdnode.cpp  muladdnode.h  oscillatornode.cpp  oscillatornode.h  patchpanelwidget.cpp  patchpanelwidget.h  (+11 more)
